force-app/main/default/objects/sma__MAAssignmentPlan__c/sma__MAAssignmentPlan__c.object-meta.xml
<CustomObject>
    <label>MapAnything Assignment Plan</label>
    <nameField>
        <label>MapAnything Assignment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Assignment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>