force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__Active__c.field-meta.xml
<CustomField>
    <fullName>sma__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>