force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__CustomAssignmentField__c.field-meta.xml
<CustomField>
    <fullName>sma__CustomAssignmentField__c</fullName>
    <label>Custom Assignment Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>