force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__DebugMode__c.field-meta.xml
<CustomField>
    <fullName>sma__DebugMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the assignment plan will run in debug mode or not.</description>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>