force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__LastBatchId__c.field-meta.xml
<CustomField>
    <fullName>sma__LastBatchId__c</fullName>
    <label>Last Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>