force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__LastSuccessfulBatchRun__c.field-meta.xml
<CustomField>
    <fullName>sma__LastSuccessfulBatchRun__c</fullName>
    <label>Last Successful Batch Run</label>
    <type>DateTime</type>
</CustomField>