force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__LatField__c.field-meta.xml
<CustomField>
    <fullName>sma__LatField__c</fullName>
    <description>The api name of the latitude field on the associated sobject which will be used to determine territory intersection.</description>
    <label>Latitude Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>