force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__LngField__c.field-meta.xml
<CustomField>
    <fullName>sma__LngField__c</fullName>
    <description>The api name of the longitude field on the associated sobject which will be used to determine territory intersection.</description>
    <label>Longitude Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>