force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__MARuleLookupField__c.field-meta.xml
<CustomField>
    <fullName>sma__MARuleLookupField__c</fullName>
    <label>Assignment Rule Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>