force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__NumBatches__c.field-meta.xml
<CustomField>
    <fullName>sma__NumBatches__c</fullName>
    <label>Number of Batches Processed Last Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>