force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__ReassignOwner__c.field-meta.xml
<CustomField>
    <fullName>sma__ReassignOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign Owner</label>
    <type>Checkbox</type>
</CustomField>