force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__SObject__c.field-meta.xml
<CustomField>
    <fullName>sma__SObject__c</fullName>
    <description>The api name of the sobject associated with this plan.</description>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>