force-app/main/default/objects/sma__MAAssignmentPlan__c/fields/sma__SOQLFilter__c.field-meta.xml
<CustomField>
    <fullName>sma__SOQLFilter__c</fullName>
    <label>SOQL Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>